# Maxxi-Blob

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
maxxi/: .env.example  .gitignore  Dockerfile  db.py  db_models.py  fly.toml  main.py  models.py  pyproject.toml  requirements.txt
maxxi/api/: api_routers.py
maxxi/auth/: __init__.py  jwt.py
maxxi/config/: config.py  connector.py
maxxi/routes/: auth.py  bucket_policies.py  repo_cdn.py  router.py  user_storage.py
maxxi/scripts/: direct_telegram_upload.py
maxxi/utils/: cdn_url.py  github_store.py  metadata.py  telegram_store.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AnimatedCat.tsx  GlobalUploadDropzone.tsx  SearchStatus.tsx
src/components/auth/: GoogleAuthPanel.tsx
src/components/bucket/: BucketHeader.tsx  CreateBucketDialog.tsx  FilePreviewModal.tsx  FileTable.tsx  UploadDialog.tsx
src/components/dashboard/: BucketsTable.tsx  InfoBanner.tsx  MetricCard.tsx
src/components/docs/: Docs.tsx
src/components/policy/: bucket_policies.tsx
src/components/ui/: input.tsx
src/lib/: config.ts  maxxiApi.ts
src/pages/: BucketDetail.tsx  Dashboard.tsx  Index.tsx
src/types/: cdn.ts
