[project]
name = "maxxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-auth>=2.43.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "telethon>=1.43.2",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
]
